--- a/ca_MobileTest/Web.config
+++ b/ca_MobileTest/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,6 +9,7 @@
     </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
+      
       <assemblies>
         <add assembly="System.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Data.Entity.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -18,14 +19,45 @@
       </buildProviders>
     </compilation>
     <httpRuntime targetFramework="4.5.2" />
+
+    <authentication mode="Forms" />
+        <profile>
+            <properties>
+                <add allowAnonymous="false" defaultValue="" name="Telphone" readOnly="false" serializeAs="String" type="System.String" />
+                <add allowAnonymous="false" defaultValue="" name="QQ" readOnly="false" serializeAs="String" type="System.String" />
+                <add allowAnonymous="false" defaultValue="" name="Fond" readOnly="false" serializeAs="String" type="System.String" />
+            </properties>
+        </profile>
+    <!--<roleManager enabled="true" />
+    <profile>
+      <properties>
+        <add allowAnonymous="true" defaultValue="" name="Telphone" readOnly="false" serializeAs="String" type="System.String" />
+        <add allowAnonymous="true" defaultValue="" name="QQ" readOnly="false" serializeAs="String" type="System.String" />
+      </properties>
+    </profile>-->
+   
+    
+    
   </system.web>
   <connectionStrings>
-    <add name="MaisonExpertDataEntities" connectionString="metadata=res://*/App_Code.EF_Model1.csdl|res://*/App_Code.EF_Model1.ssdl|res://*/App_Code.EF_Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MaisonExpertData;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="MaisonExpertDataConnectionString" connectionString="Data Source=.;Initial Catalog=MaisonExpertData;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
+    <add name="MaisonExpertDataEntities" connectionString="metadata=res://*/App_Code.EF_Model1.csdl|res://*/App_Code.EF_Model1.ssdl|res://*/App_Code.EF_Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MaisonExpertData;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MaisonExpertDataConnectionString" connectionString="Data Source=.;Initial Catalog=MaisonExpertData;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  
+  <!--<profile>
+    <properties>
+      <add allowAnonymous="true" defaultValue="" name="Telphone"
+           readOnly="false" serializeAs="String" type="System.String" />
+      <add allowAnonymous="true" defaultValue="" name="QQ"
+           readOnly="false" serializeAs="String" type="System.String" />
+    </properties>
+  </profile>-->
+
+  <!--<connectionStrings>
+    <remove name="LocalSqlServer" />
+    <add connectionString="Server=LEO9613;Database=aspnetdb;Integrated Security=true" name="LocalSqlServer" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
 </configuration>
