--- a/ca_Screen/Web.config
+++ b/ca_Screen/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -7,27 +7,29 @@
   <connectionStrings>
     <add name="MaisonExpertDataConnectionString" connectionString="Data Source=ACER\SA2008;Initial Catalog=MaisonExpertData;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="MaisonExpertDataConnectionString1" connectionString="Data Source=.;Initial Catalog=MaisonExpertData;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
-        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2" />
     <authentication mode="Forms">
-      <forms loginUrl="Login.aspx"/>
+      <forms loginUrl="Login.aspx" />
     </authentication>
-    <roleManager enabled="true"/>
-    <anonymousIdentification enabled="true"/>
+    <roleManager enabled="true" />
+    <anonymousIdentification enabled="true" />
     <profile>
       <properties>
-        <add allowAnonymous="true" defaultValue="" name="Phone" readOnly="false" serializeAs="String" type="System.String"/>
-        <add allowAnonymous="true" defaultValue="" name="Email" readOnly="false" serializeAs="String" type="System.String"/>
+        <add allowAnonymous="true" defaultValue="" name="Phone" readOnly="false" serializeAs="String" type="System.String" />
+        <add allowAnonymous="true" defaultValue="" name="Email" readOnly="false" serializeAs="String" type="System.String" />
       </properties>
     </profile>
   </system.web>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
 </configuration>
